Mon Jul 02 18:15:18 BST 2007  Olly Betts <olly@survex.com>

	* api/omenquire.cc,include/xapian/enquire.h: Fix last chance to
	  preserve ABI compatibility.

Mon Jul 02 17:52:10 BST 2007  Olly Betts <olly@survex.com>

	* api/omenquire.cc,common/multimatch.h,common/omenquireinternal.h,
	  include/xapian/enquire.h,matcher/multimatch.cc,net/remoteserver.cc,
	  tests/api_db.cc: Add support for a "matchspy" - a MatchDecider which
	  is documented to be tested on ever candidate document.  We plan to
	  optimise the current matchdecider to be used as little as possible.

Mon Jul 02 17:35:12 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_db.cc: Enhance matchfunctor1 to test that the functor
	  returns ALL matching documents, not just that all documents returned
	  match.

Mon Jul 02 16:36:57 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* common/omassert.h: Fix to avoid warning in gcc-snapshot; use
	  do{}while(0) to protect assertions, and remove the old "if (a) {}
	  else {fail}" constructions which tried to do the same job.

Mon Jul 02 14:56:58 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* bin/xapian-inspect.cc: Add missing #include of <stdio.h> - fixes
	  gcc-2.95 compilation.

Mon Jul 02 14:54:50 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* queryparser/termgenerator_internal.h: Fix for gcc-2.95
	  compilation.

Mon Jul 02 14:09:22 BST 2007  Olly Betts <olly@survex.com>

	* api/Makefile.mk,api/valuerangeproccompat.cc,
	  include/xapian/queryparser.h: Put the new NumberValueRangeProcessor
	  in a sub-namespace which we then import it from.  Restore the old
	  NumberValueRangeProcessor implementation inside the library so that
	  it is available to code linked against 1.0.0 or 1.0.1 to keep ABI
	  compatibility.

Sun Jul 01 15:32:30 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Clearer description of
	  NumberValueRangeProcessor.  Don't document the number format in