@@ -18,6 +18,7 @@ xapianinclude_HEADERS =\
 	include/xapian/enquire.h\
 	include/xapian/errorhandler.h\
 	include/xapian/expanddecider.h\
+	include/xapian/matchspy.h\
 	include/xapian/positioniterator.h\
 	include/xapian/postingiterator.h\
 	include/xapian/query.h\
