@@ -1,26 +1,26 @@
-// xapian.h: Public interfaces for core Xapian library
-//
+/** @file xapian.h
+ *  @brief Public interfaces for the Xapian library.
+ */
 // Copyright (C) 2003,2004,2005,2007 Olly Betts
 //
-// This program is free software; you can redistribute it and/or
-// modify it under the terms of the GNU General Public License as
-// published by the Free Software Foundation; either version 2 of the
-// License, or (at your option) any later version.
+// This program is free software; you can redistribute it and/or modify
+// it under the terms of the GNU General Public License as published by
+// the Free Software Foundation; either version 2 of the License, or
+// (at your option) any later version.
 //
 // This program is distributed in the hope that it will be useful,
 // but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 // GNU General Public License for more details.
 //
 // You should have received a copy of the GNU General Public License
 // along with this program; if not, write to the Free Software
-// Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
-// USA
+// Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
 
 #ifndef XAPIAN_INCLUDED_XAPIAN_H
 #define XAPIAN_INCLUDED_XAPIAN_H
 
-// Set defines for library version and check C++ ABI versions match
+// Set defines for library version and check C++ ABI versions match.
 #include <xapian/version.h>
 
 // Types
@@ -30,7 +30,7 @@
 #include <xapian/error.h>
 #include <xapian/errorhandler.h>
 
-// Access to databases, documents, etc
+// Access to databases, documents, etc.
 #include <xapian/database.h>
 #include <xapian/dbfactory.h>
 #include <xapian/document.h>
@@ -45,6 +45,7 @@
 // Searching
 #include <xapian/enquire.h>
 #include <xapian/expanddecider.h>
+#include <xapian/matchspy.h>
 #include <xapian/query.h>
 #include <xapian/queryparser.h>
 
